# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queuectl"
version = "1.0.0"
description = "A CLI-based background job orchestration system"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rishi Akkala", email = "rishiakkala6@gmail.com"}
]
keywords = ["cli", "job-queue", "background-jobs", "worker", "scheduler"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = []

[project.optional-dependencies]
dashboard = ["flask>=2.0.0"]
dev = ["pytest", "black", "flake8"]

[project.scripts]
queuectl = "queuectl.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/queuectl"
Documentation = "https://github.com/yourusername/queuectl#readme"
Repository = "https://github.com/yourusername/queuectl"
